parse response on error get